<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".control.fragment.NetworkFragment">
    <TextView
        android:id="@+id/textViewPlayerOneName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_one_colon"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editTextPlayerOneName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/name"
        android:text="@string/player_one"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_alignTop="@+id/textViewPlayerOneName"
        android:layout_toRightOf="@+id/textViewPlayerOneName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:lines="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/wins_colon"
        android:id="@+id/textView8"
        android:layout_below="@+id/editTextPlayerOneName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/textViewPlayerOneWinCount"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignLeft="@+id/editTextPlayerOneName"
        android:layout_alignStart="@+id/editTextPlayerOneName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/losses_colon"
        android:id="@+id/textView1"
        android:layout_below="@+id/textView8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/textViewPlayerOneLossCount"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/textViewPlayerOneWinCount"
        android:layout_alignStart="@+id/textViewPlayerOneWinCount" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/network_settings"
        android:id="@+id/textView"
        android:layout_below="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random"
            android:id="@+id/radioButtonRandom"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smart"
            android:id="@+id/radioButtonSmart"
            android:checked="false" />
    </RadioGroup>
    <Button
        android:id="@+id/buttonNewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
