<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".control.fragment.TwoPlayersFragment">

    <TextView
        android:id="@+id/textViewPlayerOneName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/player_one_colon"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editTextPlayerOneName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textViewPlayerOneName"
        android:layout_toRightOf="@+id/textViewPlayerOneName"
        android:hint="@string/name"
        android:lines="1"
        android:singleLine="true"
        android:text="@string/player_one"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextPlayerOneName"
        android:text="@string/wins_colon"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewPlayerOneWinCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignLeft="@+id/editTextPlayerOneName"
        android:layout_alignStart="@+id/editTextPlayerOneName"
        android:text="@string/zero" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView8"
        android:text="@string/losses_colon"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewPlayerOneLossCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/textViewPlayerOneWinCount"
        android:layout_alignStart="@+id/textViewPlayerOneWinCount"
        android:text="@string/zero" />

    <TextView
        android:id="@+id/textViewPlayerTwoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView1"
        android:text="@string/player_two_colon"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editTextPlayerTwoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editTextPlayerOneName"
        android:layout_alignRight="@+id/editTextPlayerOneName"
        android:layout_below="@+id/textViewPlayerOneLossCount"
        android:layout_toEndOf="@+id/textViewPlayerTwoName"
        android:layout_toRightOf="@+id/textViewPlayerTwoName"
        android:hint="@string/name"
        android:lines="1"
        android:singleLine="true"
        android:text="@string/player_two"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextPlayerTwoName"
        android:text="@string/wins_colon"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewPlayerTwoWinCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextPlayerTwoName"
        android:layout_alignStart="@+id/editTextPlayerTwoName"
        android:layout_below="@+id/editTextPlayerTwoName"
        android:text="@string/zero" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:text="@string/losses_colon"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewPlayerTwoLossCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignEnd="@+id/textViewPlayerTwoWinCount"
        android:layout_alignLeft="@+id/textViewPlayerTwoWinCount"
        android:layout_alignRight="@+id/textViewPlayerTwoWinCount"
        android:layout_alignStart="@+id/textViewPlayerTwoWinCount"
        android:text="@string/zero" />

    <Button
        android:id="@+id/buttonNewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/new_game" />
</RelativeLayout><!--  -->